# ChangeLog for app-dicts/dictd-vera
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/dictd-vera/ChangeLog,v 1.28 2014/03/12 10:13:02 ago Exp $

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> dictd-vera-1.21a.ebuild:
  Stable for sparc, wrt bug #502616

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> dictd-vera-1.21a.ebuild:
  Stable for ppc64, wrt bug #502616

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> dictd-vera-1.21a.ebuild:
  Stable for ppc, wrt bug #502616

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> dictd-vera-1.21a.ebuild:
  Stable for x86, wrt bug #502616

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> dictd-vera-1.21a.ebuild:
  amd64 stable, bug #502616

*dictd-vera-1.21a (05 Jan 2014)

  05 Jan 2014; Jeroen Roovers <jer@gentoo.org> +dictd-vera-1.21a.ebuild:
  Version bump. Do not install license.

  05 Jan 2014; Pacho Ramos <pacho@gentoo.org> -dictd-vera-1.7-r1.ebuild,
  -dictd-vera-1.9_pre.ebuild, metadata.xml:
  Cleanup due http://gentoo.2317880.n4.nabble.com/app-dicts-herd-is-empty-
  td271273.html

  17 Oct 2009; Mark Loeser <halcy0n@gentoo.org> dictd-vera-1.12.ebuild:
  QA fixes; unquoted variables

  05 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> dictd-vera-1.12.ebuild:
  Fix build-time dependencies.

  25 Aug 2007; Steve Dibb <beandog@gentoo.org> dictd-vera-1.12.ebuild:
  amd64 stable

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> dictd-vera-1.12.ebuild:
  x86 stable

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  29 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  dictd-vera-1.12.ebuild:
  Stable on sparc

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  dictd-vera-1.12.ebuild:
  ppc stable

  25 Nov 2005; Tom Gall <tgall@gentoo.org> dictd-vera-1.12.ebuild:
  stable on ppc64

  27 Feb 2005; Yuta SATOH <nigoro@gentoo.org> dictd-vera-1.12.ebuild:
  added ~ppc64
