@@ -1,27 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST vera-1.12.tar.gz 186892 SHA256 784e74958f364cde5b14a4c81a670adb6240e4c674b4f76ba3df25e4b4f08062 SHA512 c906274291865038b540a788647bf68427882561a1f355249a93fa8e85f32334bd06e7d4d9effaea46d445f9be315a3a1e2376298a3eb44d9fd5901db4ac6013 WHIRLPOOL 7c1c723f09238ff2d81322bbf32f5bb30f4a1197f8dfca02d6b15822c887befec2fc6c06cb6e11ad2898ed3e9fa45007ab209932bf573abc1d11869bf8f3ff37
 DIST vera-1.21a.tar.gz 237858 SHA256 0edd654c0e2e3b5418a3a2dfb14f4aa185b9b0ca13b5cacb381c232dd10b1f27 SHA512 5743f01632cd8ba7c3b706c513c4e65bfab2404d9549fbc01df9f2d783d72c7b892bf3ed1d2d0f1bd73c46f1d47904ccad03fa3d24ab3181bddb3e9d93072fd9 WHIRLPOOL 704d2987ecfd26c8f1f2d012bc0404fb5c1f9d0f9b0aaba787a83243cf4a9aa64b55b79dde8533fa01cca68f6223613ea76ab7799225fae68324f38753ee4bdf
-DIST vera_1.12-1.diff.gz 23148 SHA256 eb7287f8cdd3a67c81b2937b7abad0f234c1d4958ff6e64cdc5462d1c85d3827 SHA512 0448eaa0e5d47d8a77245e6e6de12854bffebcbef92504cb6e603ba0d8007cf0f237600aa48ff7695c098471052989055ff03d13c534d86b44987a2eb5164930 WHIRLPOOL 2849bbad7fa8b680d48995f4bfa9bcbe1e3ae4b53ec0bc2a4cbb2be1d71e3963bfe10abea9d5b69fcab73e187b938cae92cedd8c652b14b1dc90e801a70a02ae
-EBUILD dictd-vera-1.12.ebuild 1205 SHA256 fec06da4b0958d2229d77f99822bd12dc3a6f331bd70e6318b398fdca69386e2 SHA512 dc60fe9af0a62fc9835ea94ce2346ce43eb6f3d4149bca789ead63d792d1ac07332000f446525ba51add666b55ee5bea6fd0a81e716446f6f22bc49e78a1cd0c WHIRLPOOL 3e3ce70a620c754f92ade70b343273ed6327989317cbe4a0fcc239595f0546340dfdd3471e3cf82864d4fb1d8a7215960f1bb75b929dd058bd1575a4b42aff62
 EBUILD dictd-vera-1.21a.ebuild 998 SHA256 a0611d6895e620de66b8d626c31a45a1c174dda87649e1c0a4a8bb65aedf4947 SHA512 51b637526a2f4aead4ef25fd577d6ef339cd5e49618babd5c924946679e77a9e46def6e3778db3192acc0616ed7e93f16f769ac050a30967724785fc9c0f5075 WHIRLPOOL a017f69c308da78862b626d349730779b9f4121ec1c39c7a012b63ae6622beef222e1cbb302438899e89da34174f8df8bd38c9927eec41aee8c5bb4a29497adc
-MISC ChangeLog 3427 SHA256 23aea7a58af2c9d9a217cef39d63e008ff185b0bccd456c088617cee7fbf96bc SHA512 62b1db5a0dca87655422174f8761fb43f27b5e511f1a747f73ca3e836daa9a945d5c5ced96da99ba277c5f2b5d884bfa087ec1470b499956a14bc35b81cd8960 WHIRLPOOL 0e10438f1d2449541407c217fbf957e4fac272701e03f7dce78c52b1a100b8d70eca082fca0452a266416ab038a7c2560be89b5e930c3a26e33f35660be2926f
+MISC ChangeLog 3530 SHA256 0bb7aad66c97215b3c793287b5d97489a19d1f6386046e33f660c9453b3d3d3d SHA512 24ca513f01cd0ce1ab4a412b5d93747d69a1ea905cedb7497975f22b0908ef1ed6f71f8f600a119487f7f31e20322bb2f489f4ec5e057a73523b2279572a8f2a WHIRLPOOL a628eba9b5129a8ae4fc68d7b51b3612a9033256d15edc6088680eb4460d95ec580ad6eae3ccfbf594ce200119f4159bcbef55ea8550bfd1dde84dc07f3e694f
 MISC metadata.xml 208 SHA256 98f8aa3fb70533eeab6b09d5bc30bd8f649ec13d9b04363490082fb87bb6032e SHA512 d5a7f3cb2fe57f8d7783ba358068648b122d9f5de81a17bff61ce600e42b6487e6f7e2a62c8be95cc7021cb3ea88716824b1ad0565da922ea753bea2417b3d3d WHIRLPOOL e38a6cdef2acb3efdc182efde482593790f773ab3bb9b66cced3af47e4ab39368757e17c4352c6cacaefa338341db88c3bcc3ffcd32aabd7984c5b19051a7bb7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTIDMwAAoJELp701BxlEWfXNsP/jjyQodYWjOEIkLaJjF5kBXZ
-57hej5AljfcfZVmLHLQPF9WMfQvucoRGA3Mageqa4SMwP3YRFeK+PAexkfnJE1Kk
-2x0eH3nLv6GhyeQ5/sROGQcd4g7kp5TOQzFkkyk9qAGQGdQoH39K1lw4gytziooj
-aTAnHjJN6TXsEEznDRjBQblm390dL39dlYPdReINlaQHCd8JgBzE/U75Qd3Dc6Mw
-yFJ2ER5fXjan1x/deB1ndv+vLicEtw0l1PMYxiDGc32+a5wS+ytfqYenxkdla0Y5
-9q+2AYzemyFUh2wrvLU6tfInQQ2/lE61QHQBBaQZODmlE+etc9qonWqqFIiz3DWG
-S4+AowYr/26yQcnDZbP8fS3y3axHwROrQ58OvGnCcacwUq1dubv7fYLRfEBlhMYr
-KdJqY6knwMzW1AedR652hsr1JSMi2u3MOsXzvEw4LCmXrtXSsDPPtOM+RTGxO/N5
-SMPeMR02zp7xg2QtzUNBCXppKD2P5BB0rPLXJn5aL6BQ3/4moM1N7DBaKcuVwLqc
-dtQyVrVtWFMTV52gsoc17/8vtMPgp09VffjBey5YCd4SJAUM+xjdbzPSMxAVSFLT
-gKzZh4BZkRAyf/3JtmPNpL0fEYaYqSUbAbZHix2s5NVrPCC1iHmDx9KLSys2KZCU
-fOoXuFxA3cfFxDZASzud
-=kq+t
+iQJiBAEBCABMBQJTIOvmRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7OZsD/4t6nGZyv0N7iEK3gm7+QbWMQYx6Jf4YUczJ4S27VV//+6HjFGAj65N3CfZ
+flmY4HAhjKl1XhpvHbxRQ94685yylD5siaslI/dIJCgm9JYUzjLSIRpZbl5de2/y
+vRhEAGEQ/Jyn5WIhTfjcAY/KzO7Ha6/TqA8tWeXrbhyekj91IvuUxLJIW/j7Axtv
+reTlGEJJ3/FvSXuCjLR72cE+I9EKvBLIHa5vEpRxbyskVe9ruIrXqN6FiDHXz9OK
+/O9omiX8h+Y+RcRSN5Lmkum/WmQh3qd9Q2jYp8+keX1kkgiLq1DgKBhLMRlDyp8e
+ncHr9+djmJpQt0uGf/ZGR+b2HyXg7hsPKkzpAJar6OUBbwiWqJnTJhyO5eUL9SYP
+Gtvo+nd7zcYOwZgyBlJBXAQwCzys8dKSCR0oUSc3mphAfkfDOblmvAew3Vnfy4ev
+2meNWLrFl5n9khy+l+t3Q0nryFcanV7sawlzewRdnYvoWp8QWKLEm5JLq48p5zkL
+LEep2htV5Qtrw+8gmuP3QbHTxggbDAEpuR+5OrmHbIBjQSVCsCpSSaS7hQMDdgTi
+yauCQWMIjtRSTKBcwJsHklJIixoYsIMGeE2Id03m3sciFJ41wIp5V8aTAyMNX859
+1VZhXwtEZ+BDdPhk8C8TmGJt3Cu/I8yRfD/KFxX8a2KUknV7yg==
+=5mIy
 -----END PGP SIGNATURE-----
