@@ -1,10 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DEPEND=>=app-text/dictd-1.5.5
-DESCRIPTION=V.E.R.A. -- Virtual Entity of Relevant Acronyms for dict
-HOMEPAGE=http://home.snafu.de/ohei/vera/vueber-e.html
-KEYWORDS=amd64 ppc ppc64 sparc x86
-LICENSE=FDL-1.1
-RDEPEND=>=app-text/dictd-1.5.5
-SLOT=0
-SRC_URI=http://home.snafu.de/ohei/FTP/vera-1.12.tar.gz mirror://debian/pool/main/v/vera/vera_1.12-1.diff.gz
-_md5_=77c71b9fb2deee39c15027f7818bb34b
