@@ -1,13 +1,0 @@
-DEFINED_PHASES=install prepare
-DEPEND=app-arch/unzip
-DESCRIPTION=Anti-spam bayesian filter
-EAPI=2
-HOMEPAGE=http://getpopfile.org
-IUSE=cjk ipv6 mysql ssl xmlrpc
-KEYWORDS=amd64 x86
-LICENSE=GPL-2
-RDEPEND=virtual/perl-Digest-MD5 virtual/perl-MIME-Base64 dev-perl/DBD-SQLite dev-perl/HTML-Tagset dev-perl/HTML-Template dev-perl/TimeDate dev-perl/DBI perl-core/digest-base perl-core/Digest-MD5 cjk? ( dev-perl/Encode-compat dev-perl/Text-Kakasi ) mysql? ( dev-perl/DBD-mysql ) ipv6? ( dev-perl/IO-Socket-INET6 ) ssl? ( dev-libs/openssl dev-perl/IO-Socket-SSL dev-perl/Net-SSLeay ) xmlrpc? ( dev-perl/PlRPC )
-SLOT=0
-SRC_URI=http://getpopfile.org/downloads/popfile-1.1.1.zip
-_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=296fc4380ac74017a96fe7e3d0a3b05c
