@@ -3,6 +3,7 @@ Hash: SHA256
 
 DIST lammps-10Mar14.tar.gz 58558593 SHA256 019374cd421451e1e8bb03da4626f0d7c87894ee0ff59291e16ee71738186d90 SHA512 04c48160989c702ce744544cdc4b2a9dd27ba0b00ce59d4ab09801e235c068c7f40750ef04c3150cf2ed864b86db4d49c3ae604c741da2a491610154f3c585c9 WHIRLPOOL 153eda49b5c87b02d478756f5c46c99c8aa99c34d7da99ad9c41e054cd7d3a06929a11527e94bafb86cdd7396c9c73d02f250e30ab5182ae5cd43a331fe5e6ab
 DIST lammps-12Feb14.tar.gz 58143004 SHA256 31f3dcc33524d56405c06306c4ef02fc4d41d72dc0b7ac3cd9ef033f42e08c3d SHA512 525b592e3b4779fffa7a96a92d6972b1bfed8b3727746b6065c9743628421aaf4fa8ba6e72d891c2c6f016f776b9155bdff9b8dfeb8ed4dec164b334253255a2 WHIRLPOOL e15a2b56ee2918a478c979239565ad01346b60d026f2a5a6051b339f08e9328c0940767843b7fd08aaa225d097fe254d0cebbd07902671404874b9d63c91916f
+DIST lammps-12Mar14.tar.gz 58562523 SHA256 7575cdf8d2edf0429804d2d1d523c24921fe4e9eb4276bcfc5bb3f3cc480ba41 SHA512 a91e9ce5f0de0c16383b4f4d53c1ada2dca1018458c0e67a91a70df8a50cb14a52dc1e222d97af8119ad0d7c75bb01052d10be00b330ba310f45d76a5706ce49 WHIRLPOOL fb755fe7cf756c54a8843eefc5fc6420006ef6903dc049d88ca145432e8bb3eb4ac8b83360d8d138d02c2fbd967c889d7d7aaf79ee78cce736e54fcb5276155f
 DIST lammps-14Feb14.tar.gz 58547063 SHA256 188aa10c8984457e5559c30396ef56a0af51c69242b6b1ac10afa29b11ace4d9 SHA512 9fea6054e507eebc3eb41e7a6685d91bd58afd4b4c4eac692bf21bfadf48d34dfe6143d1775be89badfcb3ef5ec5a81e15c06797ac055cdf149f8139c868a0f7 WHIRLPOOL 7460b93649e9c3a6e0648e6368291205e97796b536a7b51ef59766d9db65ef7b8c2a43f24194980762c9c5b2b896d75b13c14e1350ea344fc46075269c87b098
 DIST lammps-1Feb14.tar.gz 57811478 SHA256 2d01ca4f2c52c18a9a95866f558b3f3857b22662415cb44fa16a5be4dd5bfe44 SHA512 aa84766d19d7f9f753792d6c3a9ba9b37faa671b4ae06ae89be6d3485a064326c79dc351cb784e6a03f5e4e046885a791274a64899ef117dd395e583eac13f3c WHIRLPOOL 4921525762c5842fe7bb96420db26553bf2ea3d91bfda52d2a9fad57f205487fe772c878d83e5b4ae146507e3a90509a4ff0b5628ebfda9a5dde82b8b3a95b3b
 DIST lammps-26Feb14.tar.gz 58551714 SHA256 3dd65b7396d7e30570c6070518cb78d235273acda180f65a939aa6c95c7c1412 SHA512 d8ea6ae308691cd5452265db213146fcac39a0c4139f248575e5eea394ea0c2079936a46636fcea38dcb7d68c9457f58c477fa2ee04264df628ec94a1c3c8182 WHIRLPOOL 68b40a8ddc15bac55b6295d07ef91b63755ec75707aa77d6a8654ff0ab42ad3c862884861cddc8b1cece9fe54aa153b71e9e474368455921e8c39b2d5129f94d
@@ -15,12 +16,13 @@ EBUILD lammps-20140214.ebuild 3369 SHA256 4862cf13a843c6ba8110dfb000f32a4a683e55
 EBUILD lammps-20140226.ebuild 4202 SHA256 ba599d5ddd8bce50b1582096bf2241590ec1734737d8c2d862072d98253deea6 SHA512 b67c141b923f2e5cfba2fce58a78a5122829786fbf1a5b7a1c8b85304e7d380a50034eaf4158b4aa4475a6f38b1fa14567a5de7ca77ae74e78947ab02c2f590c WHIRLPOOL 436c255cbdd927a81d4c94c20449968dc53f995f5930f7c58480aaa28a41f445e0b54e017c711fd17fda6a86ac34e5bae1aaf4ad39306cdaef32ec4b5406032c
 EBUILD lammps-20140304.ebuild 4202 SHA256 369265a9f276092833b8b11f7d3e938307dd54468cabdbfc210108945d600991 SHA512 e86a550a9829dd017204afc056d15b1501ebdd59ed85e7f3aeaef26462c047518a72cf7c55a66076c8338ebe21758811a90bad232b267a7dc4a95e3ec5e8b534 WHIRLPOOL b4b3a3dbc984a0c0a6bc416cce2c1f2e11f22d8accc5007db957edc020011d57aaf457c0f91fb261560360bdbf10fa286785389c6fca3eb53b7b696875334db4
 EBUILD lammps-20140310.ebuild 4230 SHA256 ac5aa1bf973aa3ca068fd27a387e80e01758b1cd1fbce1fba730ba2694ba987d SHA512 8d907a4200f0d5989497ef329365868f4999207089f6f61122f80f1643174a26d069b2b80c140bda0c816cd490bb0dc3fd3dffbb4c7338d9fd68b1319273acbd WHIRLPOOL 55ea36b4d956bc2030fb8d4a8cc992549f02410bfaf2780f32849f9f3690e691aaa3f8c4772464e0219f6f30f5c7a9f3d64855eefd4357b02d09ee4ebe568561
-MISC ChangeLog 5040 SHA256 089de51b011852b1df5de2f1cbdfcff71d5f4060fa884a8b6208b888a5eea9a2 SHA512 dd3295583e2f0f179dee33bb84853b25754ad0a86b4ff19fbb60c6da0100b70c0576286227af944d76425e0fef2a5f22cbd9bb62d78e444af1f4b864ee2bda08 WHIRLPOOL bbcb8997998043d6ffe2143ef78f9f5e15f984340788120689fb75037a1c3559df433f7db83117ce036b2150917b23e9523af87808ced95fe0051ead8b5dfd64
+EBUILD lammps-20140312.ebuild 4149 SHA256 ab5c63974c020f573b3f6d51b237acb1b69732ab178c8d183e48a6189035c7f9 SHA512 10d815fdcae8363e45bf53359c397e161e9dd07c2ab02b596c9c6e0fe09a1743a301f99a5055bd8b9893a2c6e3ea7c129532ebe2669229b8da6900186eb233c9 WHIRLPOOL 6a919eecd4c77c5cc1564799a2871e932ca2b252f831b2726c529a29ad78c6bfe8d0cc87baabbbbaae470ef137a6771e34185a4608066b1b60c52f452076381d
+MISC ChangeLog 5196 SHA256 b1e15c75d6080be3453cb12f9e21ede930e401106f3414de6bbe15f95a8d3d54 SHA512 56cddb5002b644b43447bef364f9261a427d0eb7eb8a2baf1c8dab7e102c9143a65bacbb30b6f862ec06cd32423925a549ada37c28dfc5586febb17a1fa59f12 WHIRLPOOL cf1166f81fd2a58ba1658b2ab0d17c544ff5e3ec282aec3ed55115779f39dbf1fd6e88bc268b0fbbce3b3cf4bd471f1309ab79adf95e0fe94837cd987ee281ef
 MISC metadata.xml 1584 SHA256 4d06db7368b155db1484a6c0792a366b37541260e700248ccf542e5fe28ffbc7 SHA512 b0bbd1fdd37e35ccc0cd4d34bb9afa09910b56a14daa078148aefcce4dc13408c1a5d5a40b865a37bc917764f5b91e266256b9ca83e0f8009859d955b68fe6a8 WHIRLPOOL ff65f1a03910b4fa5758d5537d898c733971e5f339dcd8150bc1596dfcf490b4de2be7f520405a47274e1e9827eddc3d8a1324f2f169d575d1e4584dc01e9787
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMez8UACgkQf15tZKyRylIAVgCgi78j1hCf0wOgSWJW/h/kbekJ
-WNQAnA8J1x0+wX+raFzJyh2QecoV0JaL
-=9Q44
+iEYEAREIAAYFAlMg7d4ACgkQf15tZKyRylLjuQCeKnrNNkpHEeCD8naYSnzktlQn
+YV0AniQgVq6ONLzrYkSohxUce9dfGkWu
+=yTn0
 -----END PGP SIGNATURE-----
